--- a/index.html
+++ b/index.html
@@ -7,28 +7,28 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <div class="cards">
-    <div class="card">
+  <ul class="cards">
+    <li class="card">
       <img class="card-img" src="images/placeholder-circle.svg" alt="placeholder">
-      <div class="card-body">
-        <h1>Atlas moth</h1>
+      <li class="card-body">
+        <h2>Atlas moth</h2>
         <p>A large moth found in the tropical and subtropical forests of Southeast Asia</p>
-      </div>
-    </div>
-    <div class="card">
+      </li>
+    </li>
+    <li class="card">
       <img class="card-img" src="images/placeholder-circle.svg" alt="placeholder">
-      <div class="card-body">
-        <h1>Hercules Moth</h1>
+      <li class="card-body">
+        <h2>Hercules Moth</h2>
         <p>It has a wingspan of ~27 cm, making it the largest moth found in the world</p>
-      </div>
-    </div>
-    <div class="card">
+      </li>
+    </li>
+    <li class="card">
       <img class="card-img" src="images/placeholder-circle.svg" alt="placeholder">
-      <div class="card-body">
-        <h1>Ornate moth</h1>
+      <li class="card-body">
+        <h2>Ornate moth</h2>
         <p>It is colored from pink, red, orange and yellow to white with black markings</p>
-      </div>
-    </div>
-  </div>
+      </li>
+    </li>
+  </ul>
 </body>
 </html>
